Bug 405088 - OpenConnect VPN
Summary: OpenConnect VPN
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-04 20:22 UTC by Eric Malamisura
Modified: 2024-12-23 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16
Sentry Crash Report:


Attachments
attachment-13320-0.html (1.44 KB, text/html)
2019-03-05 14:39 UTC, Eric Malamisura
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Malamisura 2019-03-04 20:22:35 UTC
SUMMARY
When configuring an OpenConnect VPN it shows the item in the network manager. Lets your configure it. Lets you even click connect. But nothing happens, no error, nothing.  This occurs for many of the other VPN types as well.

Come to find out after digging around, this is because the package is completely missing. Once I installed OpenConnect it worked.

It shouldn't show the option if its not available, but at minimal it should at least give you an error if its not available instead of just doing nothing.

STEPS TO REPRODUCE
1. Fresh KDE Neon Install attempt to setup an OpenConnect VPN connection
2. Click Connect
3. Nothing happens, no error or anything

OBSERVED RESULT
No error, no connection, just nothing.

EXPECTED RESULT
Should not show OpenConnect as an available option if package is missing, should at least show error if package is missing.

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
I see multiple tickets where this was marked as resolved. This is definitely not resolved I tested again on a clean VM and it had exact behavior.
Comment 1 Jan Grulich 2019-03-05 11:06:20 UTC
Hi,

I think I already mentioned this in some other bug, but this is an issue on packaging level, we do check only for our missing plugins, but not for missing NetworkManager plugins, because there is no way how to search them.
Comment 2 Jan Grulich 2019-03-05 11:08:01 UTC
I see that each NM plugin installs a service file, maybe I can use that, let me try to look into this more.
Comment 3 Eric Malamisura 2019-03-05 14:39:04 UTC
Created attachment 118577 [details]
attachment-13320-0.html

This works in ElementaryOS perfectly.  They only list the ones that you can
actually use.  Perhaps look at how they are doing it?

On Tue, Mar 5, 2019 at 6:08 AM Jan Grulich <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=405088
>
> Jan Grulich <jgrulich@redhat.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|RESOLVED                    |REOPENED
>          Resolution|DOWNSTREAM                  |---
>      Ever confirmed|0                           |1
>
> --- Comment #2 from Jan Grulich <jgrulich@redhat.com> ---
> I see that each NM plugin installs a service file, maybe I can use that,
> let me
> try to look into this more.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 4 Jan Grulich 2019-03-26 11:11:08 UTC
Git commit 0903dc0178ede2ef96e8155b2732f947e37449c3 by Jan Grulich.
Committed on 26/03/2019 at 11:10.
Pushed by grulich into branch 'master'.

Inform about missing NetworkManager VPN plugin
FIXED-IN: 5.16

M  +1    -0    libs/CMakeLists.txt
M  +19   -2    libs/handler.cpp

https://commits.kde.org/plasma-nm/0903dc0178ede2ef96e8155b2732f947e37449c3
Comment 5 Ben Cooksley 2024-12-23 18:23:43 UTC
Bulk transfer as requested in T17796