Inform about missing NetworkManager VPN plugin

BUG:405088
FIXED-IN: 5.16